Please enter the commit message for your changes. Lines starting  with '' will be ignored, and an empty message aborts the commit.
 On branch main
 Your branch is up to date with 'origin/main'.

 Changes to be committed:
	renamed:    admin.html -> admin/admin.html
	modified:   c9sC.html
	modified:   from.html

--- a/c9sC.html
+++ b/c9sC.html
@@ -180,6 +180,8 @@
             fetch(scriptURL, { method: 'POST', body: formData })
                 .then(response => {
                     if (response.ok) {
+                        window.location.href = 'thank.html';
+
                         alert('Success! Data submitted successfully.');
                         // Clear the form after successful submission
                         form.reset();
