--- a/from.html
+++ b/from.html
@@ -93,7 +93,7 @@
             // Check if the username and password are correct
             if (username === 'admin' && password === 'admin') {
                 // Redirect to the admin.html page
-                window.location.href = 'admin.html';
+                window.location.href = 'admin/admin.html';
                 return false; // Prevent form submission
             } else {
                 // Display an error message
