--- a/admin/admin.html
+++ b/admin/admin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="logo.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Embedded Google Sheet</title>
+    <title>Admin Page</title>
     <style>
         .container {
             text-align: center;
@@ -23,7 +23,6 @@
 </head>
 <body>
     <div class="container">
-        <h2>Teacher 1</h2>
         <div class="sheet-container">
             <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRUS9fXjkCdoWtfo6q_a2hWx32IEaIvkf2TTLO3EOeWSUfk7kW5EeZx02K_Kw8Fln_V4jKhcdLDd8Gf/pubhtml?gid=0&single=true&widget=false" frameborder="0" width="100%" height="100%"></iframe>
         </div>
