--- a/from.html
+++ b/from.html
@@ -101,6 +101,16 @@
                 return false; // Prevent form submission
             }
         }
+        // Function to prevent the user from going back
+function preventBack() {
+      window.history.pushState(null, null, window.location.href);
+      window.onpopstate = function () {
+        window.history.pushState(null, null, window.location.href);
+      };
+    }
+
+    // Call the preventBack function to prevent going back
+    preventBack();
     </script>
 </body>
 </html>
