--- a/signup.html
+++ b/signup.html
@@ -225,7 +225,16 @@ form.addEventListener('submit', e => {
         .then(response => alert('Success!', response))
         //.catch( error=> alert('Error!', error.message));
 });
+// Function to prevent the user from going back
+function preventBack() {
+      window.history.pushState(null, null, window.location.href);
+      window.onpopstate = function () {
+        window.history.pushState(null, null, window.location.href);
+      };
+    }
 
+    // Call the preventBack function to prevent going back
+    preventBack();
 </script>
 </body>
 </html>
