--- a/thank.html
+++ b/thank.html
@@ -17,7 +17,16 @@
     function redirect() {
       window.location.href = "signup.html"; 
     }
+// Function to prevent the user from going back
+function preventBack() {
+      window.history.pushState(null, null, window.location.href);
+      window.onpopstate = function () {
+        window.history.pushState(null, null, window.location.href);
+      };
+    }
 
+    // Call the preventBack function to prevent going back
+    preventBack();
     // Set the redirect timer
     setTimeout(redirect, 5000);  
   </script>
